--- a/index.html
+++ b/index.html
@@ -8,6 +8,56 @@
 </head>
 <body>
 
+<div class="container">
+    <div class="logo">
+        <img src="./images/logo.svg" alt="logo">
+    </div>
+    <div class="heading">
+        <h1>A history of everything you copy</h1>
+        <p>
+            Clipboard allows you to track and organize everything you copy. Instantly<br>
+            access your clipboard on all you devices.
+        </p>
+        <div class="install-buttons">
+            <a href="#" class="button ios">Download for iOS</a>
+            <a href="#" class="button mac">Download for Mac</a>
+        </div>
+    </div>
+
+    <div class="feature">
+        <h2>Keep track of your snippets</h2>
+        <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access<br>your
+        snippets immediately on all your devices. Our Mac and iOS apps will help you<br> organize
+        everything.</p>
+    </div>
+</div>
+
+<div class="features-list">
+    <div class="mac-image">
+        <img src="./images/image-computer.png" alt="image of imac">
+    </div>
+    <div class="features-term">
+        <div class="term">
+            <h3>Quick Search</h3>
+            <p>Easily search your snippets by context, category, web address, application, and more.</p>
+        </div>
+        <div class="term">
+            <h3>iCloud Sync</h3>
+            <p>Instantly, saves and syncs snippets across all your devices.</p>
+        </div>
+        <div class="term">
+            <h3>Complete History</h3>
+            <p>Retrieve any snippets from the first moment you started using the app.</p>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
 
 
 
