updated upto footer

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <link rel="stylesheet" href="./css/style.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+    <link rel="stylesheet" href="./css/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
 </head>
 <body>
-
 <div class="container">
     <div class="logo">
         <img src="./images/logo.svg" alt="logo">
@@ -23,44 +22,104 @@
             <a href="#" class="button mac">Download for Mac</a>
         </div>
     </div>
-
-    <div class="feature">
-        <h2>Keep track of your snippets</h2>
-        <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access<br>your
+</div>
+<div class="feature">
+    <h1>Keep track of your snippets</h1>
+    <p>Clipboard instantly stores any item you copy in the cloud, meaning you can access<br>your
         snippets immediately on all your devices. Our Mac and iOS apps will help you<br> organize
         everything.</p>
-    </div>
-</div>
-
-<div class="features-list">
-    <div class="mac-image">
-        <img src="./images/image-computer.png" alt="image of imac">
-    </div>
-    <div class="features-term">
-        <div class="term">
-            <h3>Quick Search</h3>
-            <p>Easily search your snippets by context, category, web address, application, and more.</p>
+    <div class="features-list">
+        <div class="mac-image">
+            <img src="./images/image-computer.png" alt="image of imac">
         </div>
-        <div class="term">
-            <h3>iCloud Sync</h3>
-            <p>Instantly, saves and syncs snippets across all your devices.</p>
-        </div>
-        <div class="term">
-            <h3>Complete History</h3>
-            <p>Retrieve any snippets from the first moment you started using the app.</p>
+        <div class="features-term">
+            <div class="term">
+                <h3>Quick Search</h3>
+                <p>Easily search your snippets by context, category, web address, application, and more.</p>
+            </div>
+            <div class="term">
+                <h3>iCloud Sync</h3>
+                <p>Instantly, saves and syncs snippets across all your devices.</p>
+            </div>
+            <div class="term">
+                <h3>Complete History</h3>
+                <p>Retrieve any snippets from the first moment you started using the app.</p>
+            </div>
         </div>
     </div>
 </div>
+<div class="page-feature">
+    <h1>Access Clipboard anywhere</h1>
+    <p>Whether you're on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.
+    </p>
+    <div class="image-devices">
+        <img src="./images/image-devices.png" alt="image of devices">
+    </div>
+</div>
+<div class="main-features">
+    <h1>Supercharge your workflow</h1>
+    <p>We've got the tools to boost your productivity.</p>
+    <div class="highlights">
+        <div class="card">
+            <div class="icon">
+                <img src="./images/icon-blacklist.svg" alt="" class="src">
+            </div>
+            <h3>Create blacklists</h3>
+            <p>
+                Ensure sensitive information never makes its way to your clipboard by executing certain sources.
+            </p>
+        </div>
+        <div class="card">
+            <div class="icon">
+                <img src="./images/icon-text.svg" alt="letter A" class="src">
+            </div>
+            <h3>Plain text snippets
+            </h3>
+            <p>
+                Remove unwanted formatting from the copied text for a consistent look.
+            </p>
+        </div>
+        <div class="card">
+            <div class="icon">
+                <img src="./images/icon-preview.svg" alt="preview eye button" class="src">
+            </div>
+            <h3>Sneak Preview</h3>
+            <p>
+                Quick preview of all snippets on your Clipboard for easy access.
+            </p>
+        </div>
+    </div>
 
+    <div class="company-logo">
+        <div class="google">
+         <!--   <img src="./images/logo-google.png" alt="google">-->
+        </div>
+        <div class="microsoft">
+           <!-- <img src="./images/logo-microsoft.png" alt="microsoft">-->
+        </div>
+        <div class="ibm">
+          <!--  <img src="./images/logo-ibm.png" alt="ibm">-->
+        </div>
+        <div class="hewlett">
+          <!--  <img src="./images/logo-hp.png" alt="hp">-->
+        </div>
+        <div class="vector">
+          <!--  <img src="./images/logo-vector-graphics.png" alt="vector">-->
+        </div>
+    </div>
 
-
-
-
-
-
-
-
-
+    <div class="heading">
+        <h1>Clipboard for iOS and Mac OS
+        </h1>
+        <p>
+            Available for free on the App Store. Download for Mac or iOS, sync with <br>iCloud and you're ready to start adding to your clipboard.
+        </p>
+        <div class="install-buttons">
+            <a href="#" class="button ios">Download for iOS</a>
+            <a href="#" class="button mac">Download for Mac</a>
+        </div>
+    </div>
+</div>
 <script src="./Script/script.js"></script>
 </body>
 </html>
