updated upto footer

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
     <p>We've got the tools to boost your productivity.</p>
     <div class="highlights">
         <div class="card">
-            <div class="icon">
-                <img src="./images/icon-blacklist.svg" alt="" class="src">
+            <div class="icon one">
             </div>
             <h3>Create blacklists</h3>
             <p>
@@ -70,8 +69,7 @@
             </p>
         </div>
         <div class="card">
-            <div class="icon">
-                <img src="./images/icon-text.svg" alt="letter A" class="src">
+            <div class="icon two">
             </div>
             <h3>Plain text snippets
             </h3>
@@ -80,8 +78,7 @@
             </p>
         </div>
         <div class="card">
-            <div class="icon">
-                <img src="./images/icon-preview.svg" alt="preview eye button" class="src">
+            <div class="icon three">
             </div>
             <h3>Sneak Preview</h3>
             <p>
@@ -89,30 +86,24 @@
             </p>
         </div>
     </div>
-
     <div class="company-logo">
         <div class="google">
-         <!--   <img src="./images/logo-google.png" alt="google">-->
         </div>
         <div class="microsoft">
-           <!-- <img src="./images/logo-microsoft.png" alt="microsoft">-->
         </div>
         <div class="ibm">
-          <!--  <img src="./images/logo-ibm.png" alt="ibm">-->
         </div>
         <div class="hewlett">
-          <!--  <img src="./images/logo-hp.png" alt="hp">-->
         </div>
         <div class="vector">
-          <!--  <img src="./images/logo-vector-graphics.png" alt="vector">-->
         </div>
     </div>
-
     <div class="heading">
         <h1>Clipboard for iOS and Mac OS
         </h1>
         <p>
-            Available for free on the App Store. Download for Mac or iOS, sync with <br>iCloud and you're ready to start adding to your clipboard.
+            Available for free on the App Store. Download for Mac or iOS, sync with <br>iCloud and you're ready to start
+            adding to your clipboard.
         </p>
         <div class="install-buttons">
             <a href="#" class="button ios">Download for iOS</a>
