working on resopnsiveness

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
     <div class="logo">
-        <img src="./images/logo.svg" alt="logo">
+        <img src="./images/logo.svg" alt="">
     </div>
     <div class="heading">
         <h1>A history of everything you copy</h1>
@@ -50,7 +50,8 @@
 </div>
 <div class="page-feature">
     <h1>Access Clipboard anywhere</h1>
-    <p>Whether you're on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.
+    <p>Whether you're on the go, or at your computer, you can access all your Clipboard <br> snippets in a few simple
+        clicks.
     </p>
     <div class="image-devices">
         <img src="./images/image-devices.png" alt="image of devices">
@@ -61,15 +62,16 @@
     <p>We've got the tools to boost your productivity.</p>
     <div class="highlights">
         <div class="card">
-            <div class="icon one">
+            <div class="icon-container">
+                <div class="icon one"></div>
             </div>
             <h3>Create blacklists</h3>
-            <p>
-                Ensure sensitive information never makes its way to your clipboard by executing certain sources.
-            </p>
+            <p>Ensure sensitive information never makes its way to your clipboard by executing certain sources.</p>
         </div>
         <div class="card">
-            <div class="icon two">
+            <div class="icon-container">
+                <div class="icon two">
+                </div>
             </div>
             <h3>Plain text snippets
             </h3>
@@ -78,7 +80,9 @@
             </p>
         </div>
         <div class="card">
-            <div class="icon three">
+            <div class="icon-container">
+                <div class="icon three">
+                </div>
             </div>
             <h3>Sneak Preview</h3>
             <p>
@@ -99,8 +103,7 @@
         </div>
     </div>
     <div class="heading">
-        <h1>Clipboard for iOS and Mac OS
-        </h1>
+        <h1>Clipboard for iOS and Mac OS</h1>
         <p>
             Available for free on the App Store. Download for Mac or iOS, sync with <br>iCloud and you're ready to start
             adding to your clipboard.
@@ -111,6 +114,40 @@
         </div>
     </div>
 </div>
+<footer>
+    <div class="wrapper-footer">
+        <div class="footer-logo-wrap">
+            <div class="footer-logo">
+            </div>
+        </div>
+        <div class="footer-menu">
+            <div class="menu-items">
+                <div class="item">
+                    <a href="#">Faqs</a>
+                </div>
+                <div class="item">
+                    <a href="#"> Privacy Policy</a>
+                </div>
+                <div class="item">
+                    <a href="#">Install Guide</a>
+                </div>
+                <div class="item">
+                    <a href="#">Contact Us</a>
+                </div>
+                <div class="item ">
+                    <a href="#">Press kit</a>
+                </div>
+            </div>
+        </div>
+        <div class="social-icons">
+            <ul>
+                <li><a href="#" > <img src="images/icon-facebook.svg" alt=""></a></li>
+                <li><a href="#" ><img src="images/icon-twitter.svg" alt=""></a></li>
+                <li><a href="#" ><img src="images/icon-instagram.svg" alt=""></a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
 <script src="./Script/script.js"></script>
 </body>
 </html>
